# RosBotito

./: .gitignore  LICENSE  README.md  casainge.pgm  casainge.yaml  cuarto.yaml  labo.pgm  labo.yaml  labo2.pgm  labo2.yaml  launchNodes.sh  mapita.pgm  mapita.yaml  maps.pgm  maps.yaml
install/: local_setup.sh  setup.sh
install/moveMotor/lib/moveMotor/: Teleop
install/moveMotor/share/moveMotor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/navigation_tb3/lib/navigation_tb3/: multi_waypoints.py  pub_occupancy_grid  single_goal_nav.py
install/navigation_tb3/share/navigation_tb3/: local_setup.bash  local_setup.dsv  (+4 more)
launch/: mapeo.py
log/: latest_build
maps/: .pgm  .yaml  casa1.pgm  casa1.yaml
src/moveMotor/: package.xml  setup.cfg  setup.py
src/moveMotor/moveMotor/: joystickTest.py  moveMotorTopic.py  teleop.py
src/navigation_tb3/: CMakeLists.txt
src/navigation_tb3/config/: casa2.pgm  casa2.yaml  cuarto.pgm  cuarto.yaml  cuarto2.pgm  cuarto2.yaml  map2.pgm  map2.yaml  mapCasa3.pgm  mapCasa3.yaml  mapping.rviz  mappingV2.rviz  navigation.rviz  rosbostito.lua  tb3_map.pgm  tb3_map.yaml  tb3_nav2_params.yaml  turtlebot3_lds_2d.lua  visualize.rviz
src/navigation_tb3/launch/: navigation.launch.py
src/navigation_tb3/urdf/: rosbot.csv  rosbot.urdf
src/stereo_depthai/: package.xml  setup.cfg  setup.py
src/stereo_depthai/stereo_depthai/: cloud_points.py
src/tf_transform/: package.xml  setup.cfg  setup.py
src/tf_transform/tf_transform/: Publisher_main.py  listerner_and_transform.py  odom_tf.py  only_transform.py
(+36 files in other folders)
